# Moci

./: .gitignore  .gitmodules  CMakeLists.txt
Sources/FirstLibrary/: CMakeLists.txt
Sources/FirstLibrary/Headers/: FirstLibrary.hpp  algorithm.hpp  datapool.hpp  hello.hpp
Sources/FirstLibrary/Headers/FirstLibrary/: algorithm.hpp  hello.hpp
Sources/FirstLibrary/Sources/: algorithm.cpp  hello.cpp
Sources/FirstModule/: CMakeLists.txt
Sources/FirstModule/Headers/: main.hpp
Sources/FirstModule/Sources/: main.cpp
